--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ deploy_demo:
       - demo
   environment:
     name: demo
-    url: https://frontend-demo.tugraz.at/apps/greenlight
+    url: https://dbp-demo.tugraz.at/apps/greenlight
   variables:
     DEPLOY_HOST: mw01-dev.tugraz.at
     DEPLOY_KEY: "$DEPLOY_SSH_KEY"
@@ -64,7 +64,7 @@ deploy_development:
       - main
   environment:
     name: development
-    url: https://mw-frontend-dev.tugraz.at/apps/greenlight
+    url: https://dbp-dev.tugraz.at/apps/greenlight
   variables:
     DEPLOY_HOST: mw01-dev.tugraz.at
     DEPLOY_KEY: "$DEPLOY_SSH_KEY"
