--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "i18next": "^20.0.0",
     "lit-element": "^2.3.1",
     "lit-html": "^1.2.1",
-    "pdfjs-dist": "2.8.335"
+    "pdfjs-dist": "2.8.335",
+    "qrcode-generator": "^1.4.4"
   },
   "scripts": {
     "build": "rollup -c",
