--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rollup-plugin-emit-ejs": "^3.1.0",
     "rollup-plugin-license": "^2.1.0",
     "rollup-plugin-obfuscator": "^0.2.0",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "selfsigned": "^1.10.7"
@@ -56,7 +57,8 @@
     "lit-element": "^2.3.1",
     "lit-html": "^1.2.1",
     "pdfjs-dist": "2.8.335",
-    "qrcode-generator": "^1.4.4"
+    "qrcode-generator": "^1.4.4",
+    "tippy.js": "^6.3.1"
   },
   "scripts": {
     "build": "rollup -c",
