--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "jsdoc/require-jsdoc": 0,
         "jsdoc/require-param-description": 0,
         "jsdoc/require-returns": 0,
-        "jsdoc/require-param-type": 0
+        "jsdoc/require-param-type": 0,
+        "jsdoc/require-returns-description": 0
     }
 }
