--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@dbp-toolkit/notification": "^0.2.0",
     "@dbp-toolkit/person-profile": "^0.2.0",
     "@open-wc/scoped-elements": "^1.3.3",
+    "cbor-web": "^8.0.1",
+    "certlogic-js": "^0.9.2",
     "i18next": "^20.0.0",
     "lit-element": "^2.3.1",
     "lit-html": "^1.2.1",
