Also change DEPLOY_HOST

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ deploy_demo:
     name: demo
     url: https://dbp-demo.tugraz.at/apps/greenlight
   variables:
-    DEPLOY_HOST: mw01-dev.tugraz.at
+    DEPLOY_HOST: vpu01-demo.tugraz.at
     DEPLOY_KEY: "$DEPLOY_SSH_KEY"
   <<: *deploy_defaults
 
