--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "lit-html": "^1.2.1",
     "pdfjs-dist": "2.10.377",
     "qrcode-generator": "^1.4.4",
-    "string-similarity": "^4.0.4",
-    "tippy.js": "^6.3.1"
+    "string-similarity": "^4.0.4"
   },
   "scripts": {
     "build": "rollup -c",
