Add publishing to npm.js

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,21 @@ linting:
     - yarn install
     - yarn run lint
 
+publish:
+  stage: deploy
+  only:
+    refs:
+      - deploy
+      - master
+  script:
+    # https://www.npmjs.com/settings/dbp-deploy/tokens
+    # NPM_TOKEN needs to be a "Publish" token with 2FA disabled!
+    # "Automation" tokens don't work with lerna (even if they would work with "npm publish")
+    - echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' > ~/.npmrc
+    - yarn install
+    - yarn run build
+    - yarn run publish
+
 .deploy_defaults: &deploy_defaults
   except:
     - schedules
