--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^2.1.0",
     "karma-mocha": "^2.0.1",
+    "karma-source-map-support": "^1.4.0",
     "mocha": "^9.0.0",
     "rollup": "^2.18.1",
     "rollup-plugin-copy": "^3.3.0",
