Change app name (lowercase) and change validation/error messages

--- a/app-template/app.manifest.json
+++ b/app-template/app.manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Greenlight",
-  "name": "Greenlight",
+  "short_name": "greenlight",
+  "name": "greenlight",
   "start_url": "./",
   "icons": [
     {
