--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TU Graz Greenlight",
-  "name": "TU Graz Greenlight",
+  "short_name": "TU Graz greenlight",
+  "name": "TU Graz greenlight",
   "start_url": "./",
   "icons": [
     {
