--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-eslint": "^10.0.3",
     "can-npm-publish": "^1.3.3",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^7.3.1",
     "eslint-plugin-jsdoc": "^36.0.0",
     "glob": "^7.1.6",
@@ -51,6 +52,7 @@
     "@dbp-toolkit/notification": "^0.2.0",
     "@dbp-toolkit/person-profile": "^0.2.0",
     "@open-wc/scoped-elements": "^1.3.3",
+    "base45-web": "^1.0.2",
     "certlogic-js": "^0.9.2",
     "i18next": "^20.0.0",
     "jose": "^3.16.1",
