--- a/bench/greenlight-bench/package.json
+++ b/bench/greenlight-bench/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "greenlight-bench",
 	"description": "Benchmarking for DBP Greenlight",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"license": "AGPL-3.0-or-later",
 	"bin": {
 		"greenlight-bench": "index.js"
@@ -23,7 +23,6 @@
 		"format": "prettier --write \"./**/*.{js,json}\""
 	},
 	"dependencies": {
-		"axios": "^0.21.4",
 		"chalk": "^4.1.2",
 		"cli-alerts": "^1.2.2",
 		"cli-handle-error": "^4.4.0",
@@ -31,7 +30,8 @@
 		"cli-meow-help": "^2.0.2",
 		"cli-welcome": "^2.2.2",
 		"jose": "^3.18.0",
-		"meow": "^9.0.0"
+		"meow": "^9.0.0",
+		"tmp": "^0.2.1"
 	},
 	"devDependencies": {
 		"prettier": "^2.4.1"
