--- a/package.json
+++ b/package.json
@@ -50,12 +50,11 @@
     "@dbp-toolkit/language-select": "^0.2.0",
     "@dbp-toolkit/notification": "^0.2.0",
     "@dbp-toolkit/person-profile": "^0.2.0",
-    "@open-wc/scoped-elements": "^1.3.3",
+    "@open-wc/scoped-elements": "^2.0.0",
     "certlogic-js": "^1.0.0",
     "i18next": "^21.4.2",
     "jose": "^4.0.0",
-    "lit-element": "^2.3.1",
-    "lit-html": "^1.2.1",
+    "lit": "^2.0.0",
     "mockdate": "^3.0.5",
     "pdfjs-dist": "2.10.377",
     "qrcode-generator": "^1.4.4",
