--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "jose": "^4.0.0",
     "lit": "^2.0.0",
     "mockdate": "^3.0.5",
-    "pdfjs-dist": "2.10.377",
+    "pdfjs-dist": "^2.12.313",
     "qrcode-generator": "^1.4.4",
     "string-similarity": "^4.0.4"
   },
