--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -9,5 +9,6 @@
   "composer": {
     "enabled": false
   },
-  "cloneSubmodules": true
+  "cloneSubmodules": true,
+  "ignorePaths": ["**/bench/**"]
 }
