Add prettier support

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "karma-mocha": "^2.0.1",
     "karma-source-map-support": "^1.4.0",
     "mocha": "^9.0.0",
+    "prettier": "^2.5.1",
     "rollup": "^2.18.1",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-delete": "^2.0.0",
@@ -63,6 +64,9 @@
   "scripts": {
     "build": "rollup -c",
     "i18next": "i18next-scanner",
+    "format": "yarn run format:eslint && yarn run format:prettier",
+    "format:eslint": "eslint \"**/*.{js,ts}\" --fix",
+    "format:prettier": "prettier \"**/*.{js,json,ts}\" --write",
     "watch": "rollup -c --watch",
     "watch-local": "yarn run watch",
     "watch-full": "rollup -c --watch --environment FORCE_FULL",
