--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,14 +1,10 @@
 {
-  "extends": [
-    "config:base",
-    "group:allNonMajor",
-    "schedule:weekly"
-  ],
-  "ignorePresets": [":prHourlyLimit2"],
-  "rangeStrategy": "update-lockfile",
-  "composer": {
-    "enabled": false
-  },
-  "cloneSubmodules": true,
-  "ignorePaths": ["**/bench/**"]
+    "extends": ["config:base", "group:allNonMajor", "schedule:weekly"],
+    "ignorePresets": [":prHourlyLimit2"],
+    "rangeStrategy": "update-lockfile",
+    "composer": {
+        "enabled": false
+    },
+    "cloneSubmodules": true,
+    "ignorePaths": ["**/bench/**"]
 }
