Add back @webcomponents/scoped-custom-element-registry

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
         "@dbp-toolkit/language-select": "^0.3.0",
         "@dbp-toolkit/notification": "^0.3.0",
         "@dbp-toolkit/person-profile": "^0.2.0",
-        "@open-wc/scoped-elements": "^2.0.0",
+        "@open-wc/scoped-elements": "^2.1.0",
+        "@webcomponents/scoped-custom-element-registry": "^0.0.5",
         "certlogic-js": "^1.0.0",
         "i18next": "^21.4.2",
         "jose": "^4.0.0",
