Port to new qr image scanning api
The qr-code-scanner package now exposes an API for scanning
single images as well, so use that.

This means we no longer depend on the "qr-scanner" library directly.

--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
         "mockdate": "^3.0.5",
         "pdfjs-dist": "^2.12.313",
         "qrcode-generator": "^1.4.4",
-        "string-similarity": "^4.0.4",
-        "qr-scanner": "^1.4.0"
+        "string-similarity": "^4.0.4"
     },
     "scripts": {
         "build": "rollup -c",
