--- a/package.json
+++ b/package.json
@@ -48,11 +48,12 @@
         "@dbp-toolkit/app-shell": "^0.3.0",
         "@dbp-toolkit/auth": "^0.3.0",
         "@dbp-toolkit/common": "^0.3.0",
-        "@dbp-toolkit/font-source-sans-pro": "^0.2.0",
         "@dbp-toolkit/language-select": "^0.3.0",
         "@dbp-toolkit/notification": "^0.3.0",
         "@dbp-toolkit/person-profile": "^0.2.0",
         "@open-wc/scoped-elements": "^2.1.0",
+        "@tugraz/font-source-sans-pro": "^0.2.4",
+        "@tugraz/web-components": "^0.3.4",
         "@webcomponents/scoped-custom-element-registry": "^0.0.5",
         "certlogic-js": "^1.0.0",
         "i18next": "^21.4.2",
