renovate: limit pdfjs-dist to <3
to avoid dropping safari 13 support

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -6,5 +6,11 @@
         "enabled": false
     },
     "cloneSubmodules": true,
-    "ignorePaths": ["**/bench/**"]
+    "ignorePaths": ["**/bench/**"],
+    "packageRules": [
+        {
+          "matchPackageNames": ["pdfjs-dist"],
+          "allowedVersions": "<3"
+        }
+    ]
 }
