Try to fix tag name

--- a/.github/workflows/build-deploy-ci-image.yml
+++ b/.github/workflows/build-deploy-ci-image.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           context: .github/workflows
           push: true
-          tags: latest
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
