--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -8,6 +8,10 @@ jobs:
       image: ghcr.io/${{ github.repository }}-ci:latest
       options: --user root
 
+    env:
+      # for firefox
+      HOME: /root
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
