--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -11,12 +11,28 @@ jobs:
     env:
       # for firefox
       HOME: /root
+      PLAYWRIGHT_BROWSERS_PATH: /tmp/_playwright_cache
+      YARN_CACHE_PATH: /tmp/_yarn_cache
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           submodules: true
+
+      - name: Set yarn cache path
+        run: |
+          yarn config set cache-folder "$YARN_CACHE_PATH"
+
+      - name: Restore cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ env.YARN_CACHE_PATH }}
+            ${{ env.PLAYWRIGHT_BROWSERS_PATH }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: Install dependencies
         run: yarn install
