--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -2,7 +2,7 @@ name: Build and Test
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  test:
+  build-test-publish:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/${{ github.repository }}-ci:latest
@@ -29,3 +29,13 @@ jobs:
 
       - name: Run lint
         run: yarn run lint
+
+      - name: Publish to NPM
+        run: |
+          # https://www.npmjs.com/settings/dbp-deploy/tokens
+          # NPM_TOKEN needs to be a "Publish" token with 2FA disabled!
+          echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' > ~/.npmrc
+          yarn install
+          yarn run build
+          # yarn always reports "https://registry.yarnpkg.com/@dbp-topics%2fsignature - Not found", so we are using npm directly
+          npm run do-publish
