--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "license": "LGPL-2.1-or-later",
     "repository": {
         "type": "git",
-        "url": "https://gitlab.tugraz.at/dbp/greenlight/greenlight"
+        "url": "https://github.com/digital-blueprint/greenlight-frontend"
     },
     "private": true,
     "workspaces": [
