--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -60,3 +60,18 @@ jobs:
           yarn run build
           # yarn always reports "https://registry.yarnpkg.com/@dbp-topics%2fsignature - Not found", so we are using npm directly
           npm run do-publish
+
+      - name: Deploy
+        if: github.ref == 'refs/heads/main'
+        with:
+          environment: ${{ github.ref_name }}
+        env:
+          DEPLOY_TRIGGER_TOKEN: ${{ secrets.DEPLOY_TRIGGER_TOKEN }}
+        run: |
+          curl -X POST --fail \
+              -F "token=${DEPLOY_TRIGGER_TOKEN}" \
+              -F "ref=main" \
+              -F "variables[UPSTREAM_PROJECT_PATH]=dbp/greenlight/greenlight" \
+              -F "variables[UPSTREAM_COMMIT_BRANCH]=${{ github.ref_name }}" \
+              -F "variables[UPSTREAM_COMMIT_SHA]=${{ github.ref_name }}" \
+              https://gitlab.tugraz.at/api/v4/projects/21238/trigger/pipeline
