--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -2,9 +2,8 @@ name: Build and Test
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  build-test-publish:
+  test:
     runs-on: ubuntu-latest
-    environment: ${{ github.ref_name }}
     container:
       image: ghcr.io/${{ github.repository }}-ci:latest
       options: --user root
@@ -25,15 +24,23 @@ jobs:
         run: |
           yarn config set cache-folder "$YARN_CACHE_PATH"
 
-      - name: Restore cache
+      - name: Restore yarn cache
         uses: actions/cache@v3
         with:
           path: |
             ${{ env.YARN_CACHE_PATH }}
-            ${{ env.PLAYWRIGHT_BROWSERS_PATH }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-
+            yarn-
+
+      - name: Restore playwright cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ env.PLAYWRIGHT_BROWSERS_PATH }}
+          key: playwright-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            playwright-
 
       - name: Install dependencies
         run: yarn install
@@ -46,6 +53,34 @@ jobs:
 
       - name: Run lint
         run: yarn run lint
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [test]
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/demo' || github.ref == 'refs/heads/production'
+    environment: ${{ github.ref_name }}
+
+    env:
+      YARN_CACHE_PATH: /tmp/_yarn_cache
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          submodules: true
+
+      - name: Set yarn cache path
+        run: |
+          yarn config set cache-folder "$YARN_CACHE_PATH"
+
+      - name: Restore yarn cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ env.YARN_CACHE_PATH }}
+          key: yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            yarn-
 
       - name: Publish to NPM
         if: github.ref == 'refs/heads/main'
