--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "@dbp-toolkit/language-select": "^0.3.0",
         "@dbp-toolkit/notification": "^0.3.0",
         "@dbp-toolkit/person-profile": "^0.2.0",
+        "@fontsource/nunito-sans": "^4.5.10",
         "@open-wc/scoped-elements": "^2.1.0",
         "@tugraz/font-source-sans-pro": "^0.2.4",
         "@tugraz/web-components": "^0.3.4",
@@ -66,6 +67,7 @@
     },
     "scripts": {
         "build": "rollup --bundleConfigAsCjs -c",
+        "build-custom": "rollup --bundleConfigAsCjs -c --environment APP_ENV:localCustom",
         "i18next": "i18next",
         "format": "yarn run format:eslint && yarn run format:prettier",
         "format:eslint": "eslint \"**/*.{js,ts}\" --fix",
@@ -74,6 +76,7 @@
         "watch-local": "yarn run watch",
         "watch-full": "rollup --bundleConfigAsCjs -c --watch --environment FORCE_FULL",
         "watch-bs": "rollup --bundleConfigAsCjs -c --watch --environment APP_ENV:bs",
+        "watch-custom": "rollup --bundleConfigAsCjs -c --watch --environment APP_ENV:localCustom",
         "test": "rollup --bundleConfigAsCjs -c --environment APP_ENV:test && karma start --singleRun",
         "test-full": "rollup --bundleConfigAsCjs -c --environment FORCE_FULL,APP_ENV:test && karma start --singleRun",
         "lint": "eslint .",
