build: switch from yarn to npm
npm v16 supports workspaces now, so we no longer need yarn.
one less tool to install/care about.

--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -7,7 +7,6 @@ jobs:
 
     env:
       PLAYWRIGHT_BROWSERS_PATH: /tmp/_playwright_cache
-      YARN_CACHE_PATH: /tmp/_yarn_cache
 
     steps:
       - name: Checkout repository
@@ -15,44 +14,36 @@ jobs:
         with:
           submodules: true
 
-      - name: Set yarn cache path
-        run: |
-          yarn config set cache-folder "$YARN_CACHE_PATH"
-
-      - name: Restore yarn cache
-        uses: actions/cache@v3
+      - uses: actions/setup-node@v3
         with:
-          path: |
-            ${{ env.YARN_CACHE_PATH }}
-          key: yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            yarn-
+          node-version: 16
+          cache: 'npm'
 
       - name: Restore playwright cache
         uses: actions/cache@v3
         with:
           path: |
             ${{ env.PLAYWRIGHT_BROWSERS_PATH }}
-          key: playwright-${{ hashFiles('**/yarn.lock') }}
+          key: playwright-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             playwright-
 
       - name: Install dependencies
         run: |
-          yarn install
+          npm ci
 
       - name: Run build
-        run: APP_ENV=development yarn run build
+        run: APP_ENV=development npm run build
 
       - name: Install test dependencies
         run: |
           ./node_modules/.bin/playwright install-deps chromium firefox
 
       - name: Run tests
-        run: yarn run test-full
+        run: npm run test-full
 
       - name: Run lint
-        run: yarn run lint
+        run: npm run lint
 
   deploy:
     runs-on: ubuntu-latest
@@ -61,7 +52,7 @@ jobs:
     environment: ${{ github.ref_name }}
 
     env:
-      YARN_CACHE_PATH: /tmp/_yarn_cache
+      NPM_CACHE_PATH: /tmp/_npm_cache
 
     steps:
       - name: Checkout repository
@@ -69,18 +60,10 @@ jobs:
         with:
           submodules: true
 
-      - name: Set yarn cache path
-        run: |
-          yarn config set cache-folder "$YARN_CACHE_PATH"
-
-      - name: Restore yarn cache
-        uses: actions/cache@v3
+      - uses: actions/setup-node@v3
         with:
-          path: |
-            ${{ env.YARN_CACHE_PATH }}
-          key: yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            yarn-
+          node-version: 16
+          cache: 'npm'
 
       - name: Publish to NPM
         if: github.ref == 'refs/heads/main'
@@ -90,9 +73,8 @@ jobs:
           # https://www.npmjs.com/settings/dbp-deploy/tokens
           # NPM_TOKEN needs to be a "Publish" token with 2FA disabled!
           echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' > ~/.npmrc
-          yarn install
-          yarn run build
-          # yarn always reports "https://registry.yarnpkg.com/@dbp-topics%2fsignature - Not found", so we are using npm directly
+          npm install
+          npm run build
           npm run do-publish
 
       - name: Deploy and wait for completion
