--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -4,13 +4,8 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   test:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/${{ github.repository }}-ci:latest
-      options: --user root
 
     env:
-      # for firefox
-      HOME: /root
       PLAYWRIGHT_BROWSERS_PATH: /tmp/_playwright_cache
       YARN_CACHE_PATH: /tmp/_yarn_cache
 
@@ -43,7 +38,9 @@ jobs:
             playwright-
 
       - name: Install dependencies
-        run: yarn install
+        run: |
+          yarn install
+          ./node_modules/.bin/playwright install-deps
 
       - name: Run build
         run: APP_ENV=development yarn run build
