CI: only install deps for the browsers we use

--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           yarn install
-          ./node_modules/.bin/playwright install-deps
+          ./node_modules/.bin/playwright install-deps chromium firefox
 
       - name: Run build
         run: APP_ENV=development yarn run build
