--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "vendor/toolkit/packages/*"
     ],
     "engines": {
-        "node" : ">=16.0.0",
-        "npm" : ">=7.0.0"
+        "node": ">=16.0.0",
+        "npm": ">=7.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.10.3",
@@ -22,6 +22,7 @@
         "@rollup/plugin-commonjs": "^24.0.0",
         "@rollup/plugin-json": "^6.0.0",
         "@rollup/plugin-node-resolve": "^15.0.0",
+        "@rollup/plugin-replace": "^5.0.2",
         "@rollup/plugin-terser": "^0.4.0",
         "@rollup/plugin-url": "^8.0.0",
         "can-npm-publish": "^1.3.3",
@@ -44,7 +45,6 @@
         "rollup-plugin-delete": "^2.0.0",
         "rollup-plugin-emit-ejs": "^3.1.0",
         "rollup-plugin-license": "^3.0.0",
-        "rollup-plugin-replace": "^2.2.0",
         "rollup-plugin-serve": "^2.0.0",
         "selfsigned": "^2.0.0"
     },
